nav fix test width and spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -37,28 +37,26 @@ header p {
 
 
 /* Navigation Bar */
-.nav-container {
-    margin: 0 auto;
+nav {
+    background: #444;
 }
 
-nav {
-    width: 100vw;
-    background: #444;
-    text-align: center;
-    margin: 0;
-    padding: 0;
+.nav-container {
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 nav ul {
     list-style: none;
+    display: flex;
+    justify-content: space-around;
+    padding: 0;
+    margin: 0;
 }
 
-nav ul li {
-    display: inline;
-    margin: 0 15px;
-}
-
-nav ul li a {
+nav ul li a{
+    display: block;
+    padding: 1em;
     color: white;
     text-decoration: none;
     font-weight: bold;
